grammar.output
Terminals unused in grammar

   T_Return
   T_NEQ
   ID
   ND
   DD
   T_String
   T_OB
   T_Def
   T_List


State 87 conflicts: 2 shift/reduce


Grammar

    0 $accept: StartDebugger $end

    1 $@1: /* empty */

    2 StartDebugger: $@1 StartParse T_EndOfFile

    3 constant: T_Number

    4 term: T_ID
    5     | constant

    6 StartParse: T_NL StartParse

    7 $@2: /* empty */

    8 StartParse: finalStatements T_NL $@2 StartParse
    9           | finalStatements T_NL

   10 basic_stmt: break_stmt
   11           | assign_stmt
   12           | arith_exp
   13           | bool_exp
   14           | print_stmt

   15 arith_exp: term
   16          | arith_exp T_PL arith_exp
   17          | arith_exp T_MN arith_exp
   18          | arith_exp T_ML arith_exp
   19          | arith_exp T_DV arith_exp
   20          | T_MN arith_exp
   21          | T_OP arith_exp T_CP

   22 bool_exp: bool_term T_Or bool_term
   23         | arith_exp T_LT arith_exp
   24         | bool_term T_And bool_term
   25         | arith_exp T_GT arith_exp
   26         | arith_exp T_ELT arith_exp
   27         | arith_exp T_EGT arith_exp
   28         | bool_term

   29 bool_term: bool_factor
   30          | arith_exp T_EQ arith_exp
   31          | T_True
   32          | T_False

   33 bool_factor: T_Not bool_factor
   34            | T_OP bool_exp T_CP

   35 break_stmt: T_Break

   36 assign_stmt: T_ID T_EQL arith_exp
   37            | T_ID T_EQL bool_exp

   38 print_stmt: T_Print T_OP term T_CP

   39 finalStatements: basic_stmt
   40                | cmpd_stmt
   41                | error T_NL

   42 cmpd_stmt: if_stmt
   43          | while_stmt
   44          | for_stmt

   45 if_stmt: T_If bool_exp T_Cln start_suite
   46        | T_If bool_exp T_Cln start_suite elif_stmts

   47 elif_stmts: else_stmt
   48           | T_Elif bool_exp T_Cln start_suite elif_stmts

   49 else_stmt: T_Else T_Cln start_suite

   50 while_stmt: T_While bool_exp T_Cln start_suite

   51 myrange: term
   52        | term T_Comma term
   53        | term T_Comma term T_Comma term

   54 for_stmt: T_For T_ID T_In T_Range T_OP myrange T_CP T_Cln start_suite

   55 start_suite: basic_stmt

   56 $@3: /* empty */

   57 start_suite: T_NL $@3 finalStatements suite

   58 suite: T_NL finalStatements suite
   59      | T_NL end_suite

   60 $@4: /* empty */

   61 end_suite: T_CB $@4 finalStatements

   62 $@5: /* empty */

   63 end_suite: T_CB $@5
   64          | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256) 41
T_EndOfFile (258) 2
T_Return (259)
T_Number (260) 3
T_True (261) 31
T_False (262) 32
T_ID (263) 4 36 37 54
T_Print (264) 38
T_Range (265) 54
T_Cln (266) 45 46 48 49 50 54
T_NL (267) 6 8 9 41 57 58 59
T_EQL (268) 36 37
T_NEQ (269)
T_EQ (270) 30
T_GT (271) 25
T_LT (272) 23
T_EGT (273) 27
T_ELT (274) 26
T_Or (275) 22
T_And (276) 24
T_Not (277) 33
T_In (278) 54
ID (279)
ND (280)
DD (281)
T_String (282)
T_If (283) 45 46
T_Elif (284) 48
T_While (285) 50
T_For (286) 54
T_Else (287) 49
T_Break (288) 35
T_MN (289) 17 20
T_PL (290) 16
T_DV (291) 19
T_ML (292) 18
T_OP (293) 21 34 38 54
T_CP (294) 21 34 38 54
T_OB (295)
T_CB (296) 61 63
T_Def (297)
T_Comma (298) 52 53
T_List (299)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
StartDebugger (46)
    on left: 2, on right: 0
$@1 (47)
    on left: 1, on right: 2
constant (48)
    on left: 3, on right: 5
term (49)
    on left: 4 5, on right: 15 38 51 52 53
StartParse (50)
    on left: 6 8 9, on right: 2 6 8
$@2 (51)
    on left: 7, on right: 8
basic_stmt (52)
    on left: 10 11 12 13 14, on right: 39 55
arith_exp (53)
    on left: 15 16 17 18 19 20 21, on right: 12 16 17 18 19 20 21 23
    25 26 27 30 36
bool_exp (54)
    on left: 22 23 24 25 26 27 28, on right: 13 34 37 45 46 48 50
bool_term (55)
    on left: 29 30 31 32, on right: 22 24 28
bool_factor (56)
    on left: 33 34, on right: 29 33
break_stmt (57)
    on left: 35, on right: 10
assign_stmt (58)
    on left: 36 37, on right: 11
print_stmt (59)
    on left: 38, on right: 14
finalStatements (60)
    on left: 39 40 41, on right: 8 9 57 58 61
cmpd_stmt (61)
    on left: 42 43 44, on right: 40
if_stmt (62)
    on left: 45 46, on right: 42
elif_stmts (63)
    on left: 47 48, on right: 46 48
else_stmt (64)
    on left: 49, on right: 47
while_stmt (65)
    on left: 50, on right: 43
myrange (66)
    on left: 51 52 53, on right: 54
for_stmt (67)
    on left: 54, on right: 44
start_suite (68)
    on left: 55 57, on right: 45 46 48 49 50 54
$@3 (69)
    on left: 56, on right: 57
suite (70)
    on left: 58 59, on right: 57 58
end_suite (71)
    on left: 61 63 64, on right: 59
$@4 (72)
    on left: 60, on right: 61
$@5 (73)
    on left: 62, on right: 63


state 0

    0 $accept: . StartDebugger $end

    $default  reduce using rule 1 ($@1)

    StartDebugger  go to state 1
    $@1            go to state 2


state 1

    0 $accept: StartDebugger . $end

    $end  shift, and go to state 3


state 2

    2 StartDebugger: $@1 . StartParse T_EndOfFile

    error     shift, and go to state 4
    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_NL      shift, and go to state 10
    T_Not     shift, and go to state 11
    T_If      shift, and go to state 12
    T_While   shift, and go to state 13
    T_For     shift, and go to state 14
    T_Break   shift, and go to state 15
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant         go to state 18
    term             go to state 19
    StartParse       go to state 20
    basic_stmt       go to state 21
    arith_exp        go to state 22
    bool_exp         go to state 23
    bool_term        go to state 24
    bool_factor      go to state 25
    break_stmt       go to state 26
    assign_stmt      go to state 27
    print_stmt       go to state 28
    finalStatements  go to state 29
    cmpd_stmt        go to state 30
    if_stmt          go to state 31
    while_stmt       go to state 32
    for_stmt         go to state 33


state 3

    0 $accept: StartDebugger $end .

    $default  accept


state 4

   41 finalStatements: error . T_NL

    T_NL  shift, and go to state 34


state 5

    3 constant: T_Number .

    $default  reduce using rule 3 (constant)


state 6

   31 bool_term: T_True .

    $default  reduce using rule 31 (bool_term)


state 7

   32 bool_term: T_False .

    $default  reduce using rule 32 (bool_term)


state 8

    4 term: T_ID .
   36 assign_stmt: T_ID . T_EQL arith_exp
   37            | T_ID . T_EQL bool_exp

    T_EQL  shift, and go to state 35

    $default  reduce using rule 4 (term)


state 9

   38 print_stmt: T_Print . T_OP term T_CP

    T_OP  shift, and go to state 36


state 10

    6 StartParse: T_NL . StartParse

    error     shift, and go to state 4
    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_NL      shift, and go to state 10
    T_Not     shift, and go to state 11
    T_If      shift, and go to state 12
    T_While   shift, and go to state 13
    T_For     shift, and go to state 14
    T_Break   shift, and go to state 15
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant         go to state 18
    term             go to state 19
    StartParse       go to state 37
    basic_stmt       go to state 21
    arith_exp        go to state 22
    bool_exp         go to state 23
    bool_term        go to state 24
    bool_factor      go to state 25
    break_stmt       go to state 26
    assign_stmt      go to state 27
    print_stmt       go to state 28
    finalStatements  go to state 29
    cmpd_stmt        go to state 30
    if_stmt          go to state 31
    while_stmt       go to state 32
    for_stmt         go to state 33


state 11

   33 bool_factor: T_Not . bool_factor

    T_Not  shift, and go to state 11
    T_OP   shift, and go to state 38

    bool_factor  go to state 39


state 12

   45 if_stmt: T_If . bool_exp T_Cln start_suite
   46        | T_If . bool_exp T_Cln start_suite elif_stmts

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 41
    bool_exp     go to state 42
    bool_term    go to state 24
    bool_factor  go to state 25


state 13

   50 while_stmt: T_While . bool_exp T_Cln start_suite

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 41
    bool_exp     go to state 43
    bool_term    go to state 24
    bool_factor  go to state 25


state 14

   54 for_stmt: T_For . T_ID T_In T_Range T_OP myrange T_CP T_Cln start_suite

    T_ID  shift, and go to state 44


state 15

   35 break_stmt: T_Break .

    $default  reduce using rule 35 (break_stmt)


state 16

   20 arith_exp: T_MN . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 46


state 17

   21 arith_exp: T_OP . arith_exp T_CP
   34 bool_factor: T_OP . bool_exp T_CP

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 47
    bool_exp     go to state 48
    bool_term    go to state 24
    bool_factor  go to state 25


state 18

    5 term: constant .

    $default  reduce using rule 5 (term)


state 19

   15 arith_exp: term .

    $default  reduce using rule 15 (arith_exp)


state 20

    2 StartDebugger: $@1 StartParse . T_EndOfFile

    T_EndOfFile  shift, and go to state 49


state 21

   39 finalStatements: basic_stmt .

    $default  reduce using rule 39 (finalStatements)


state 22

   12 basic_stmt: arith_exp .
   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp
   23 bool_exp: arith_exp . T_LT arith_exp
   25         | arith_exp . T_GT arith_exp
   26         | arith_exp . T_ELT arith_exp
   27         | arith_exp . T_EGT arith_exp
   30 bool_term: arith_exp . T_EQ arith_exp

    T_EQ   shift, and go to state 50
    T_GT   shift, and go to state 51
    T_LT   shift, and go to state 52
    T_EGT  shift, and go to state 53
    T_ELT  shift, and go to state 54
    T_MN   shift, and go to state 55
    T_PL   shift, and go to state 56
    T_DV   shift, and go to state 57
    T_ML   shift, and go to state 58

    $default  reduce using rule 12 (basic_stmt)


state 23

   13 basic_stmt: bool_exp .

    $default  reduce using rule 13 (basic_stmt)


state 24

   22 bool_exp: bool_term . T_Or bool_term
   24         | bool_term . T_And bool_term
   28         | bool_term .

    T_Or   shift, and go to state 59
    T_And  shift, and go to state 60

    $default  reduce using rule 28 (bool_exp)


state 25

   29 bool_term: bool_factor .

    $default  reduce using rule 29 (bool_term)


state 26

   10 basic_stmt: break_stmt .

    $default  reduce using rule 10 (basic_stmt)


state 27

   11 basic_stmt: assign_stmt .

    $default  reduce using rule 11 (basic_stmt)


state 28

   14 basic_stmt: print_stmt .

    $default  reduce using rule 14 (basic_stmt)


state 29

    8 StartParse: finalStatements . T_NL $@2 StartParse
    9           | finalStatements . T_NL

    T_NL  shift, and go to state 61


state 30

   40 finalStatements: cmpd_stmt .

    $default  reduce using rule 40 (finalStatements)


state 31

   42 cmpd_stmt: if_stmt .

    $default  reduce using rule 42 (cmpd_stmt)


state 32

   43 cmpd_stmt: while_stmt .

    $default  reduce using rule 43 (cmpd_stmt)


state 33

   44 cmpd_stmt: for_stmt .

    $default  reduce using rule 44 (cmpd_stmt)


state 34

   41 finalStatements: error T_NL .

    $default  reduce using rule 41 (finalStatements)


state 35

   36 assign_stmt: T_ID T_EQL . arith_exp
   37            | T_ID T_EQL . bool_exp

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 62
    bool_exp     go to state 63
    bool_term    go to state 24
    bool_factor  go to state 25


state 36

   38 print_stmt: T_Print T_OP . term T_CP

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40

    constant  go to state 18
    term      go to state 64


state 37

    6 StartParse: T_NL StartParse .

    $default  reduce using rule 6 (StartParse)


state 38

   34 bool_factor: T_OP . bool_exp T_CP

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 41
    bool_exp     go to state 48
    bool_term    go to state 24
    bool_factor  go to state 25


state 39

   33 bool_factor: T_Not bool_factor .

    $default  reduce using rule 33 (bool_factor)


state 40

    4 term: T_ID .

    $default  reduce using rule 4 (term)


state 41

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp
   23 bool_exp: arith_exp . T_LT arith_exp
   25         | arith_exp . T_GT arith_exp
   26         | arith_exp . T_ELT arith_exp
   27         | arith_exp . T_EGT arith_exp
   30 bool_term: arith_exp . T_EQ arith_exp

    T_EQ   shift, and go to state 50
    T_GT   shift, and go to state 51
    T_LT   shift, and go to state 52
    T_EGT  shift, and go to state 53
    T_ELT  shift, and go to state 54
    T_MN   shift, and go to state 55
    T_PL   shift, and go to state 56
    T_DV   shift, and go to state 57
    T_ML   shift, and go to state 58


state 42

   45 if_stmt: T_If bool_exp . T_Cln start_suite
   46        | T_If bool_exp . T_Cln start_suite elif_stmts

    T_Cln  shift, and go to state 65


state 43

   50 while_stmt: T_While bool_exp . T_Cln start_suite

    T_Cln  shift, and go to state 66


state 44

   54 for_stmt: T_For T_ID . T_In T_Range T_OP myrange T_CP T_Cln start_suite

    T_In  shift, and go to state 67


state 45

   21 arith_exp: T_OP . arith_exp T_CP

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 68


state 46

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp
   20          | T_MN arith_exp .

    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 20 (arith_exp)


state 47

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp
   21          | T_OP arith_exp . T_CP
   23 bool_exp: arith_exp . T_LT arith_exp
   25         | arith_exp . T_GT arith_exp
   26         | arith_exp . T_ELT arith_exp
   27         | arith_exp . T_EGT arith_exp
   30 bool_term: arith_exp . T_EQ arith_exp

    T_EQ   shift, and go to state 50
    T_GT   shift, and go to state 51
    T_LT   shift, and go to state 52
    T_EGT  shift, and go to state 53
    T_ELT  shift, and go to state 54
    T_MN   shift, and go to state 55
    T_PL   shift, and go to state 56
    T_DV   shift, and go to state 57
    T_ML   shift, and go to state 58
    T_CP   shift, and go to state 69


state 48

   34 bool_factor: T_OP bool_exp . T_CP

    T_CP  shift, and go to state 70


state 49

    2 StartDebugger: $@1 StartParse T_EndOfFile .

    $default  reduce using rule 2 (StartDebugger)


state 50

   30 bool_term: arith_exp T_EQ . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 71


state 51

   25 bool_exp: arith_exp T_GT . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 72


state 52

   23 bool_exp: arith_exp T_LT . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 73


state 53

   27 bool_exp: arith_exp T_EGT . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 74


state 54

   26 bool_exp: arith_exp T_ELT . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 75


state 55

   17 arith_exp: arith_exp T_MN . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 76


state 56

   16 arith_exp: arith_exp T_PL . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 77


state 57

   19 arith_exp: arith_exp T_DV . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 78


state 58

   18 arith_exp: arith_exp T_ML . arith_exp

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 45

    constant   go to state 18
    term       go to state 19
    arith_exp  go to state 79


state 59

   22 bool_exp: bool_term T_Or . bool_term

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 80
    bool_term    go to state 81
    bool_factor  go to state 25


state 60

   24 bool_exp: bool_term T_And . bool_term

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 80
    bool_term    go to state 82
    bool_factor  go to state 25


state 61

    8 StartParse: finalStatements T_NL . $@2 StartParse
    9           | finalStatements T_NL .

    T_EndOfFile  reduce using rule 9 (StartParse)
    $default     reduce using rule 7 ($@2)

    $@2  go to state 83


state 62

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp
   23 bool_exp: arith_exp . T_LT arith_exp
   25         | arith_exp . T_GT arith_exp
   26         | arith_exp . T_ELT arith_exp
   27         | arith_exp . T_EGT arith_exp
   30 bool_term: arith_exp . T_EQ arith_exp
   36 assign_stmt: T_ID T_EQL arith_exp .

    T_EQ   shift, and go to state 50
    T_GT   shift, and go to state 51
    T_LT   shift, and go to state 52
    T_EGT  shift, and go to state 53
    T_ELT  shift, and go to state 54
    T_MN   shift, and go to state 55
    T_PL   shift, and go to state 56
    T_DV   shift, and go to state 57
    T_ML   shift, and go to state 58

    $default  reduce using rule 36 (assign_stmt)


state 63

   37 assign_stmt: T_ID T_EQL bool_exp .

    $default  reduce using rule 37 (assign_stmt)


state 64

   38 print_stmt: T_Print T_OP term . T_CP

    T_CP  shift, and go to state 84


state 65

   45 if_stmt: T_If bool_exp T_Cln . start_suite
   46        | T_If bool_exp T_Cln . start_suite elif_stmts

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_NL      shift, and go to state 85
    T_Not     shift, and go to state 11
    T_Break   shift, and go to state 15
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    basic_stmt   go to state 86
    arith_exp    go to state 22
    bool_exp     go to state 23
    bool_term    go to state 24
    bool_factor  go to state 25
    break_stmt   go to state 26
    assign_stmt  go to state 27
    print_stmt   go to state 28
    start_suite  go to state 87


state 66

   50 while_stmt: T_While bool_exp T_Cln . start_suite

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_NL      shift, and go to state 85
    T_Not     shift, and go to state 11
    T_Break   shift, and go to state 15
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    basic_stmt   go to state 86
    arith_exp    go to state 22
    bool_exp     go to state 23
    bool_term    go to state 24
    bool_factor  go to state 25
    break_stmt   go to state 26
    assign_stmt  go to state 27
    print_stmt   go to state 28
    start_suite  go to state 88


state 67

   54 for_stmt: T_For T_ID T_In . T_Range T_OP myrange T_CP T_Cln start_suite

    T_Range  shift, and go to state 89


state 68

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp
   21          | T_OP arith_exp . T_CP

    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58
    T_CP  shift, and go to state 69


state 69

   21 arith_exp: T_OP arith_exp T_CP .

    $default  reduce using rule 21 (arith_exp)


state 70

   34 bool_factor: T_OP bool_exp T_CP .

    $default  reduce using rule 34 (bool_factor)


state 71

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp
   30 bool_term: arith_exp T_EQ arith_exp .

    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 30 (bool_term)


state 72

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp
   25 bool_exp: arith_exp T_GT arith_exp .

    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 25 (bool_exp)


state 73

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp
   23 bool_exp: arith_exp T_LT arith_exp .

    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 23 (bool_exp)


state 74

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp
   27 bool_exp: arith_exp T_EGT arith_exp .

    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 27 (bool_exp)


state 75

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp
   26 bool_exp: arith_exp T_ELT arith_exp .

    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 26 (bool_exp)


state 76

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   17          | arith_exp T_MN arith_exp .
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp

    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 17 (arith_exp)


state 77

   16 arith_exp: arith_exp . T_PL arith_exp
   16          | arith_exp T_PL arith_exp .
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp

    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58

    $default  reduce using rule 16 (arith_exp)


state 78

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp
   19          | arith_exp T_DV arith_exp .

    $default  reduce using rule 19 (arith_exp)


state 79

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   18          | arith_exp T_ML arith_exp .
   19          | arith_exp . T_DV arith_exp

    $default  reduce using rule 18 (arith_exp)


state 80

   16 arith_exp: arith_exp . T_PL arith_exp
   17          | arith_exp . T_MN arith_exp
   18          | arith_exp . T_ML arith_exp
   19          | arith_exp . T_DV arith_exp
   30 bool_term: arith_exp . T_EQ arith_exp

    T_EQ  shift, and go to state 50
    T_MN  shift, and go to state 55
    T_PL  shift, and go to state 56
    T_DV  shift, and go to state 57
    T_ML  shift, and go to state 58


state 81

   22 bool_exp: bool_term T_Or bool_term .

    $default  reduce using rule 22 (bool_exp)


state 82

   24 bool_exp: bool_term T_And bool_term .

    $default  reduce using rule 24 (bool_exp)


state 83

    8 StartParse: finalStatements T_NL $@2 . StartParse

    error     shift, and go to state 4
    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_NL      shift, and go to state 10
    T_Not     shift, and go to state 11
    T_If      shift, and go to state 12
    T_While   shift, and go to state 13
    T_For     shift, and go to state 14
    T_Break   shift, and go to state 15
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant         go to state 18
    term             go to state 19
    StartParse       go to state 90
    basic_stmt       go to state 21
    arith_exp        go to state 22
    bool_exp         go to state 23
    bool_term        go to state 24
    bool_factor      go to state 25
    break_stmt       go to state 26
    assign_stmt      go to state 27
    print_stmt       go to state 28
    finalStatements  go to state 29
    cmpd_stmt        go to state 30
    if_stmt          go to state 31
    while_stmt       go to state 32
    for_stmt         go to state 33


state 84

   38 print_stmt: T_Print T_OP term T_CP .

    $default  reduce using rule 38 (print_stmt)


state 85

   57 start_suite: T_NL . $@3 finalStatements suite

    $default  reduce using rule 56 ($@3)

    $@3  go to state 91


state 86

   55 start_suite: basic_stmt .

    $default  reduce using rule 55 (start_suite)


state 87

   45 if_stmt: T_If bool_exp T_Cln start_suite .
   46        | T_If bool_exp T_Cln start_suite . elif_stmts

    T_Elif  shift, and go to state 92
    T_Else  shift, and go to state 93

    T_Elif    [reduce using rule 45 (if_stmt)]
    T_Else    [reduce using rule 45 (if_stmt)]
    $default  reduce using rule 45 (if_stmt)

    elif_stmts  go to state 94
    else_stmt   go to state 95


state 88

   50 while_stmt: T_While bool_exp T_Cln start_suite .

    $default  reduce using rule 50 (while_stmt)


state 89

   54 for_stmt: T_For T_ID T_In T_Range . T_OP myrange T_CP T_Cln start_suite

    T_OP  shift, and go to state 96


state 90

    8 StartParse: finalStatements T_NL $@2 StartParse .

    $default  reduce using rule 8 (StartParse)


state 91

   57 start_suite: T_NL $@3 . finalStatements suite

    error     shift, and go to state 4
    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 8
    T_Print   shift, and go to state 9
    T_Not     shift, and go to state 11
    T_If      shift, and go to state 12
    T_While   shift, and go to state 13
    T_For     shift, and go to state 14
    T_Break   shift, and go to state 15
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant         go to state 18
    term             go to state 19
    basic_stmt       go to state 21
    arith_exp        go to state 22
    bool_exp         go to state 23
    bool_term        go to state 24
    bool_factor      go to state 25
    break_stmt       go to state 26
    assign_stmt      go to state 27
    print_stmt       go to state 28
    finalStatements  go to state 97
    cmpd_stmt        go to state 30
    if_stmt          go to state 31
    while_stmt       go to state 32
    for_stmt         go to state 33


state 92

   48 elif_stmts: T_Elif . bool_exp T_Cln start_suite elif_stmts

    T_Number  shift, and go to state 5
    T_True    shift, and go to state 6
    T_False   shift, and go to state 7
    T_ID      shift, and go to state 40
    T_Not     shift, and go to state 11
    T_MN      shift, and go to state 16
    T_OP      shift, and go to state 17

    constant     go to state 18
    term         go to state 19
    arith_exp    go to state 41
    bool_exp     go to state 98
    bool_term    go to state 24
    bool_factor  go to state 25


state 93

   49 else_stmt: T_Else . T_Cln start_suite

    T_Cln  shift, and go to state 99


state 94

   46 if_stmt: T_If bool_exp T_Cln start_suite elif_stmts .

    $default  reduce using rule 46 (if_stmt)


state 95

   47 elif_stmts: else_stmt .

    $default  reduce using rule 47 (elif_stmts)


state 96

   54 for_stmt: T_For T_ID T_In T_Range T_OP . myrange T_CP T_Cln start_suite

    T_Number  shift, and go to state 5
    T_ID      shift, and go to state 40

    constant  go to state 18
    term      go to state 100
    myrange   go to state 101


state 97

   57 start_suite: T_NL $@3 finalStatements . suite

    T_NL  shift, and go to state 102

    suite  go to state 103


state 98

   48 elif_stmts: T_Elif bool_exp . T_Cln start_suite elif_stmts

    T_Cln  shift, and go to state 104


state 99

   49 else_stmt: T_Else T_Cln . start_suite
